--- a/index.html
+++ b/index.html
@@ -9,11 +9,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de viagens</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
+    <header>
+
+        <div class="bg-surfice-color">
+
+        
+
+            <nav class="conteiner">
+            <a href="#">
+                <img src="assets/logo/Logo.svg" alt="Logo Tavrelgram">
+            </a> 
+
+            <ul>
+                    <li>
+                        <a href="#">
+                            <img src="/assets/icons/Vector (4).png" alt="icon de buscar">
+                        </a>
+                    </li>
+
+                    <li><a href="">Explorer</a></li>
+                    <li><a href="">Minhas viagens</a></li>
+                    <li><a href="">Buscar</a></li>
+                    <li><a href="#"> 
+                        <img src="/assets/img/Profile pic.png" alt="Imagem de Isabela Torres">
+                    </a></li>
+            </ul>
+        
+            </nav>
+        </div>
+    </header>
 
 
 </body>
