--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     <img src="assets/img/Image 11.png" alt="...">
     <img src="assets/img/Image 12.png" alt="...">
 </main>
-<footer>
+<footer class="conteiner">
+    <span>Travalgram &copy; 2024</span>
+
+    <span>Termos de uso</span>
+
+    <span>Políticas de privacidade</span>
 
 </footer>
 
